--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -9,10 +9,18 @@
   padding: 0 0 .2em 1em;
 }
 
+span{
+  background: #FFEAAA;
+}
+
 .icon-menu {
-  /* TODO: Add styles for the icon-menu class (whether it be the
-      hamburger font icon or an image of your choosing). It should be
-      bigger, and off to the right. */
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  font-size: 32px;
+  display: inline-block;
+  width: 2em;
+  height: 2em;
 }
 
 .main-nav {
