--- a/starter-code/styles/base.css
+++ b/starter-code/styles/base.css
@@ -1,6 +1,9 @@
-/* TODO: Add a rule for images, so they never exceed their container's width. */
+/* Done: Add a rule for images, so they never exceed their container's width. */
 
-
+img{
+  max-width: 100%;
+  max-height: 100%;
+}
 
 body {
   line-height: 1.5;
@@ -12,6 +15,7 @@ hr {
   margin: 1em;
   width: 80%;
 }
+
 
 /*TEXT STYLES
 =======================================*/
